objects/VOC_Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VOC Survey Response</relationshipLabel>
        <relationshipName>VOC_Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Answer_Cares__c</fullName>
        <label>Answer Cares</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_NPS__c</fullName>
        <label>Answer NPS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Resolved_Issue__c</fullName>
        <label>Answer Resolved Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Score__c</fullName>
        <description>The custom field is added as part of SA-639. The field will calculate the average score for Sales VOC survey.</description>
        <formula>IF((If(ISBLANK(Response_1_Numeric__c) ,0,1) + IF(ISBLANK(Response_3_Numeric__c),0,1)+if(ISBLANK(Response_4_Numeric__c),0,1))&gt;0,((IF(ISBLANK(Response_1_Numeric__c),0,Response_1_Numeric__c) + IF(ISBLANK( Response_3_Numeric__c ),0, Response_3_Numeric__c ) + if(ISBLANK( Response_4_Numeric__c ),0, Response_4_Numeric__c ))
/
(If(ISBLANK(Response_1_Numeric__c) ,0,1) + IF(ISBLANK(Response_3_Numeric__c),0,1)+if(ISBLANK(Response_4_Numeric__c),0,1))), 0)</formula>
        <label>Avg Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_NPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>VOC Survey Response</relationshipLabel>
        <relationshipName>VOC_Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup for Opportunity object for which the survey is targeted.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>VOC Survey Response</relationshipLabel>
        <relationshipName>VOC_Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold the Opportunity Owner Id and will get displayed on &quot;Related List&quot; for this object</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VOC_Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Cares__c</fullName>
        <label>Question Cares</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_NPS__c</fullName>
        <label>Question_NPS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Resolved_Issue__c</fullName>
        <label>Question Resolved Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Response10__c</fullName>
        <label>Response 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Response11__c</fullName>
        <label>Response11</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Response1__c</fullName>
        <label>Response 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text10__c</fullName>
        <label>Question 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text11__c</fullName>
        <label>Question 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text1__c</fullName>
        <label>Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_1_Numeric__c</fullName>
        <description>This field will be used to store numeric response</description>
        <label>Response 1 Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_3_Numeric__c</fullName>
        <description>This field will be used to store numeric response</description>
        <label>Response 3 Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_4_Numeric__c</fullName>
        <description>This field will be used to store numeric response</description>
        <label>Response 4 Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Answer_11__c</fullName>
        <label>Response Answer 11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Answer_3__c</fullName>
        <label>Response Answer 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Answer_7__c</fullName>
        <label>Response Answer 7</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Formula11__c</fullName>
        <formula>CASE(Question_Response11__c, 
&quot;0&quot;, &quot;Extremely Disatisfied&quot;,
&quot;1&quot;, &quot;Extremely Disatisfied&quot;,
&quot;2&quot;, &quot;Extremely Disatisfied&quot;,
&quot;3&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;4&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;5&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;6&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;7&quot;, &quot;Neutral&quot;, 
&quot;8&quot;, &quot;Neutral&quot;, 
&quot;9&quot;, &quot;Extremely Satisfied&quot;, 
&quot;10&quot;,&quot;Extremely Satisfied&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response 11</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Formula3__c</fullName>
        <formula>CASE(Question_Response3__c,
&quot;0&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;1&quot;, &quot;Extremely Disatisfied&quot;,
&quot;2&quot;, &quot;Extremely Disatisfied&quot;,
&quot;3&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;4&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;5&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;6&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;7&quot;, &quot;Neutral&quot;, 
&quot;8&quot;, &quot;Neutral&quot;, 
&quot;9&quot;, &quot;Extremely Satisfied&quot;, 
&quot;10&quot;,&quot;Extremely Satisfied&quot;,
&quot;&quot;)</formula>
        <label>Response 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Formula7__c</fullName>
        <formula>CASE(Question_Response7__c, 
&quot;0&quot;, &quot;Extremely Disatisfied&quot;,
&quot;1&quot;, &quot;Extremely Disatisfied&quot;,
&quot;2&quot;, &quot;Extremely Disatisfied&quot;,
&quot;3&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;4&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;5&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;6&quot;, &quot;Extremely Disatisfied&quot;, 
&quot;7&quot;, &quot;Neutral&quot;, 
&quot;8&quot;, &quot;Neutral&quot;, 
&quot;9&quot;, &quot;Extremely Satisfied&quot;, 
&quot;10&quot;,&quot;Extremely Satisfied&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response 7</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyResponseURL__c</fullName>
        <label>Survey Response Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Identifier__c</fullName>
        <label>Survey Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Received_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>This will store the date on which survey response received.</description>
        <label>Survey Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <description>This will store the date of Survey Trigger.</description>
        <label>Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>This Field Stores the unique identifier for the survey to ensure that we are able to distinguish between the different survey types.</description>
        <inlineHelpText>The unique identifier for the Survey.</inlineHelpText>
        <label>Survey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>